[package]
name = "aoc"
version = "0.1.6"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"
exclude = ["aoc*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"

[workspace]
members = ["markdown"]
