[package]
name = "aoc"
version = "0.1.7"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2021"
exclude = ["aoc*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
rayon = "1.5.1"
termion = "1.5.6"
itertools = "0.10.1"

[workspace]
members = ["markdown"]
